add cypress tests

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "test:e2e": "stencil test --e2e",
     "test:all": "stencil test --spec --e2e",
     "test:all:watch": "stencil test --spec --e2e --watchAll",
+    "test:cy:run": "cypress run",
+    "test:cy:open": "cypress open",
     "code-format": "npx prettier --write 'src/**/*.{tsx,css,ts}'",
     "prepare-bmg": "rimraf custom && mkdir custom && copyfiles ./deploy/bmg/**/* custom -u 2 -V && copyfiles ./deploy/bmg/* custom -u 2 -V",
     "prepare-bzga": "rimraf custom && mkdir custom && copyfiles ./deploy/bzga/**/* custom -u 2 -V && copyfiles ./deploy/bzga/* custom -u 2 -V",
@@ -31,18 +33,18 @@
     "api-proxy": "node ./scripts/devProxy.js"
   },
   "devDependencies": {
-    "@stencil/core": "^2.6.0",
+    "@lokalise/node-api": "^6.0.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/exec": "^5.0.0",
     "@semantic-release/github": "^7.1.1",
     "@semantic-release/release-notes-generator": "^9.0.1",
-    "semantic-release": "^17.2.1",
-    "@lokalise/node-api": "^6.0.0",
+    "@stencil/core": "^2.6.0",
     "@stencil/router": "^1.0.1",
     "@types/jest": "26.0.23",
     "@types/puppeteer": "5.4.3",
     "copyfiles": "^2.4.1",
+    "cypress": "^10.4.0",
     "deep-assign": "^3.0.0",
     "dotenv": "^10.0.0",
     "javascript-stringify": "^2.1.0",
@@ -52,6 +54,7 @@
     "prettier": "^2.3.1",
     "puppeteer": "10.0.0",
     "rollup-plugin-visualizer": "^4.2.2",
+    "semantic-release": "^17.2.1",
     "workbox-build": "6.1.5"
   },
   "license": "MIT",
