--- a/.github/workflows/test_pr.yml
+++ b/.github/workflows/test_pr.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           PANDEMIC_TRACKING_URL: 'dummy'
 
-      - run: rm -f www && npm run prepare-charite && npm run build-charite
+      - run: rm -r -f www && npm run prepare-charite && npm run build-charite
 
       - name: Save build folder
         uses: actions/upload-artifact@v3
