--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -9,7 +9,7 @@ env:
   STORAGE_NAME_PREFIX: osprs${{ github.event.pull_request.number }}
 
 jobs:
-  charite:
+  preview:
     runs-on: ubuntu-18.04
     steps:
       - name: Cancel Previous Runs
@@ -35,6 +35,17 @@ jobs:
           STORAGE_NAME_PREFIX: ${{ env.STORAGE_NAME_PREFIX}}
           SENTRY_DSN: https://a0d00f7ce1924a0a8521a8fe88af734c@o197997.ingest.sentry.io/5801653
 
+      - name: Generate Deploy Script
+        run: | 
+          cat storage-selection.txt | xargs -I@ echo "
+              az storage account create --kind StorageV2 --name @ --resource-group $RESSOURCE_GROUP --subscription $AZURE_SUBSCRIPTION_ID
+              az storage blob service-properties update --account-name @ --static-website --404-document 404.html --index-document index.html --subscription $AZURE_SUBSCRIPTION_ID
+              az storage blob upload-batch -d '\$web' -s ./out/@ --account-name @ --account-key \"\$(az storage account keys list --account-name @ --resource-group  $RESSOURCE_GROUP --subscription $AZURE_SUBSCRIPTION_ID --query \"[0].value\")\" --overwrite --subscription $AZURE_SUBSCRIPTION_ID" > deploy.sh
+        env:
+          RESSOURCE_GROUP: ${{ SECRETS.RESSOURCE_GROUP }}
+          AZURE_SUBSCRIPTION_ID: ${{ SECRETS.AZURE_SUBSCRIPTION_ID }}
+          STORAGE_NAME_PREFIX: ${{ env.STORAGE_NAME_PREFIX}}
+
       # Setup Preview
       - name: Azure Login
         uses: azure/login@v1.1
@@ -46,11 +57,9 @@ jobs:
         with:
           azcliversion: 2.41.0
           inlineScript: |
-            cat storage-selection.txt | xargs -I@ sh -c "
-              az storage account create --kind StorageV2 --name @ --resource-group ${{ env.RESSOURCE_GROUP }} --subscription ${{ SECRETS.AZURE_SUBSCRIPTION_ID }}
-              az storage blob service-properties update --account-name @ --static-website --404-document 404.html --index-document index.html --subscription ${{ SECRETS.AZURE_SUBSCRIPTION_ID }}
-              az storage blob upload-batch -d '\$web' -s ./out/@ --account-name @ --account-key \"\$(az storage account keys list --account-name @ --resource-group  ${{ env.RESSOURCE_GROUP }} --subscription ${{ SECRETS.AZURE_SUBSCRIPTION_ID }} --query \"[0].value\")\" --overwrite --subscription ${{ SECRETS.AZURE_SUBSCRIPTION_ID }}"
-    
+            chmod +x $GITHUB_WORKSPACE/deploy.sh
+            $GITHUB_WORKSPACE/deploy.sh
+
       # - name: Find Comment
       #   uses: peter-evans/find-comment@v1
       #   id: fc
