--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -74,8 +74,11 @@ jobs:
       - id: get-comment-body
         if: github.event_name == 'pull_request'
         run: |
-          output="$(cat storage-selection.txt | xargs -L1 -I@ echo ' - [@](https://@.z16.web.core.windows.net)')"
-          echo "body=$output" >> $GITHUB_OUTPUT
+          body="$(cat storage-selection.txt | xargs -L1 -I@ echo ' - [@](https://@.z16.web.core.windows.net)')"
+          delimiter="$(openssl rand -hex 8)"
+          echo "body<<$delimiter" >> $GITHUB_OUTPUT
+          echo "$body" >> $GITHUB_OUTPUT
+          echo "$delimiter" >> $GITHUB_OUTPUT
 
       - name: Create comment
         if: ${{ steps.fc.outputs.comment-id == 0  && github.event_name == 'pull_request'}}
