also test on master

--- a/.github/workflows/test_pr.yml
+++ b/.github/workflows/test_pr.yml
@@ -1,25 +1,29 @@
 name: Test PR
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
     branches:
       - master
       - staging
 
 jobs:
-  install:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v1
         with:
           node-version: '13.x'
-      - name: Install and Test
+      - name: Run Unit Tests
         run: npm ci && npm run prepare-customization && npm run test:all
         env:
           PANDEMIC_TRACKING_URL: 'dummy'
 
-      - run: rm -r -f www && npm run prepare-charite && npm run build-charite
+      - name: Build App for Cypress Tests
+        run: rm -r -f www && npm run prepare-charite && npm run build-charite
 
       - name: Save build folder
         uses: actions/upload-artifact@v3
