--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,7 +7,8 @@ additionalRepositories:
 workspaceLocation: QuestionnaireApp/OSPRS.code-workspace
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: |
+  - name: QuestionnaireApp
+    init: |
       npm install
       npm run prepare-charite
     command: npm start
