--- a/.github/workflows/test_pr.yml
+++ b/.github/workflows/test_pr.yml
@@ -38,7 +38,7 @@ jobs:
     container:
       image: cypress/browsers:node16.13.0-chrome95-ff94
       options: --user 1001
-    needs: install
+    needs: build
     strategy:
       # when one test fails, DO NOT cancel the other
       # containers, because this will kill Cypress processes
@@ -93,7 +93,7 @@ jobs:
     container:
       image: cypress/browsers:node16.13.0-chrome95-ff94
       options: --user 1001
-    needs: install
+    needs: build
     strategy:
       # when one test fails, DO NOT cancel the other
       # containers, because this will kill Cypress processes
@@ -139,7 +139,7 @@ jobs:
     container:
       image: cypress/browsers:node16.13.0-chrome95-ff94
       options: --user 1001
-    needs: install
+    needs: build
     strategy:
       # when one test fails, DO NOT cancel the other
       # containers, because this will kill Cypress processes
@@ -184,7 +184,7 @@ jobs:
     container:
       image: cypress/browsers:node16.13.0-chrome95-ff94
       options: --user 1001
-    needs: install
+    needs: build
     strategy:
       # when one test fails, DO NOT cancel the other
       # containers, because this will kill Cypress processes
